; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_spell.c_open_spellbuf.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_spell.c_open_spellbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i8*, i8* }

@TRUE = common dso_local global i8* null, align 8
@empty_option = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_5__* ()* @open_spellbuf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_5__* @open_spellbuf() #0 {
  %1 = alloca %struct.TYPE_5__*, align 8
  %2 = call i64 @alloc_clear(i32 24)
  %3 = inttoptr i64 %2 to %struct.TYPE_5__*
  store %struct.TYPE_5__* %3, %struct.TYPE_5__** %1, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %5 = icmp ne %struct.TYPE_5__* %4, null
  br i1 %5, label %6, label %17

6:                                                ; preds = %0
  %7 = load i8*, i8** @TRUE, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 2
  store i8* %7, i8** %9, align 8
  %10 = load i8*, i8** @TRUE, align 8
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 1
  store i8* %10, i8** %12, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %14 = call i32 @ml_open(%struct.TYPE_5__* %13)
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %16 = call i32 @ml_open_file(%struct.TYPE_5__* %15)
  br label %17

17:                                               ; preds = %6, %0
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  ret %struct.TYPE_5__* %18
}

declare dso_local i64 @alloc_clear(i32) #1

declare dso_local i32 @ml_open(%struct.TYPE_5__*) #1

declare dso_local i32 @ml_open_file(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
